--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "hist-digitized.netlify.app"
 title = "History, Digitized"
 copyright = "Copyright (c) 2020 Chantal Brousseau"
 paginate = 2
