--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hist-digitized.netlify.app"
+baseURL = "https://flamboyant-dubinsky-791725.netlify.app"
 title = "History, Digitized"
 copyright = "Copyright (c) 2020 Chantal Brousseau"
 paginate = 2
@@ -8,7 +8,7 @@ enableInlineShortcodes = true
 footnoteReturnLinkContents = "^"
 googleAnalytics = "UA-XXXX"
 DisqusShortname = ""
-theme = "hugo-theme-chunky-poster"
+
 
 [menu]
   [[menu.main]]
