--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://hist-digitized.netlify.app"
+baseURL = "https://hist-digtized.netlify.app"
 title = "History, Digitized"
 copyright = "Copyright (c) 2020 Chantal Brousseau"
 paginate = 2
